syntax = "proto3";

package pb;

import "rpc_airline.proto";

option go_package = "github.com/niiniyare/awo/pkg/api/v1/pb";

service AirlinesService {
  rpc CreateAirline(CreateAirlineRequest) returns (CreateAirlineResponse) {}

  rpc GetAirline(GetAirlineRequest) returns (GetAirlineResponse) {}

  rpc UpdateAirline(UpdateAirlineRequest) returns (UpdateAirlineResponse) {}

  rpc DeleteAirline(DeleteAirlineRequest) returns (DeleteAirlineResponse) {}

  rpc ListAirlines(ListAirlinesReq) returns (ListAirlineRes) {}
}
