syntax = "proto3";

package cawo;
import "google/protobuf/timestamp.proto";
option go_package = "/;pb";

message AirlineCompany {
    int64 company_ID = 1;
    string company_name = 2;
    string iata_code = 3;
    google.protobuf.Timestamp created_at = 4;
//    string mainAirport = 4;
}